--- a/_site.yml
+++ b/_site.yml
@@ -8,9 +8,11 @@ navbar:
       href: index.html
     - text: "GIS Work"
       href: geog176A.html
+    - text: "CV"
+      href: cv.html
   right:
-    - icon: fa-github
+    - icon: fa-rocket
       href: https://github.com/JiwonBaik96
 output:
   html_document:
-    theme: cerulean
+    theme: simplex
